jwt auth, oauth2 added, models
